<resources>
    <string name="calculator_expressions">%1$s</string>
    <string name="app_name">Talha\'s Application</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="equalSign">=</string>
    <string name="_0">0</string>
    <string name="dotSign">.</string>
    <string name="plusSign">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minusSign">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplySign">x</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divisionSign">/</string>
    <string name="modulusSign">%</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">register</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_register">Register</string>
    <string name="login_activity">Login Activity</string>
    <string name="hello_world_from_talha">Hello World! From Talha</string>
    <string name="register_activity">Register Activity</string>
    <string name="calculator_activity">Calculator Activity</string>
    <string name="toggle_text">Toggle Text</string>
    <string name="title_activity_main">Main Activity</string>
</resources>