<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button18"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button20"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modulusSign"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button19"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button21"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divisionSign"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplySign"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minusSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/button29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plusSign" style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dotSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button33"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equalSign"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>