<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mainActivityLoginActivityButton"
                android:layout_width="212dp"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/login_activity"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="@+id/mainActivityToggleButton"
                app:layout_constraintStart_toStartOf="@+id/mainActivityToggleButton"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityToggleButton" />

            <TextView
                android:id="@+id/mainActivityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/hello_world_from_talha"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mainActivityRegisterActivityButton"
                android:layout_width="212dp"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/register_activity"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="@+id/mainActivityLoginActivityButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/mainActivityLoginActivityButton"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityLoginActivityButton" />

            <Button
                android:id="@+id/mainActivityCalculatorActivityButton"
                android:layout_width="212dp"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/calculator_activity"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="@+id/mainActivityRegisterActivityButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/mainActivityRegisterActivityButton"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityRegisterActivityButton" />

            <Button
                android:id="@+id/mainActivityToggleButton"
                android:layout_width="212dp"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:text="@string/toggle_text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/mainActivityTextView"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="@+id/mainActivityTextView"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>